# libzero-dev

./: LICENSE  LibZero.atstart  LibZero.atzip  libZero_simple.atzip  zeroDev
include/: asf.h
lib/: Makefile  atmel_start.c  atmel_start.h
lib/config/: FreeRTOSConfig.h  hpl_adc1_v120_config.h  hpl_eic1_v101a_config.h  hpl_gclk1_v210_config.h  hpl_tc1_v121_config.h  hpl_usb_d_v101_config.h  peripheral_gclk_config.h
lib/documentation/: RTOS.rst
lib/hal/hpl/core/: hpl_core_m0plus_base.c
lib/hal/hpl/dsu/: hpl_dsu_v200.c
lib/hal/hpl/gclk/: hpl_gclk1_v210_base.c
lib/hal/hpl/include/: hpl_gpio.h  hpl_init.h  hpl_pwm.h  hpl_timer.h
lib/hal/hpl/pac/: hpl_pac1_v101_base.c
lib/hal/hpl/pm/: hpl_pm1_v201.c
lib/hal/hpl/port/: hpl_port_v100_base.inc
lib/hal/hpl/tc/: hpl_tc1_v112_base.h  hpl_tc1_v112_base.inc  hpl_tc1_v121.c
lib/hal/hri/: hri_dsu_v200.h  hri_pac_v101.h  hri_pm_v201.h
lib/hal/include/: hal_timer.h
lib/hal/src/: hal_timer.c
lib/samd21a/gcc/gcc/: samd21j18a_flash.ld  samd21j18a_sram.ld
lib/samd21a/include/: samd21e16a.h  samd21e17a.h  samd21g17au.h  samd21g18au.h  samd21j15a.h  system_samd21.h
lib/samd21a/include/component/: ac.h  dmac.h  dsu.h  hmatrixb.h  i2s.h  mtb.h  pac.h  pm.h  sercom.h
lib/samd21a/include/instance/: ac.h  adc.h  dac.h  dmac.h  dsu.h  i2s.h  pac2.h  pm.h  rtc.h  sbmatrix.h  sercom1.h  tc6.h  tc7.h  tcc1.h  tcc2.h  wdt.h
lib/samd21a/include/pio/: samd21e16a.h  samd21g16a.h  samd21j16a.h  samd21j17a.h
lib/usb/: usb_protocol.c  usb_protocol.d
lib/utils/include/: utils.h
lib/utils/src/: utils_syscalls.c
lib2/: Makefile  Makefile.backup  atmel_start.c  atmel_start.h
lib2/config/: hpl_eic1_v101a_config.h  hpl_pm1_v201_config.h  hpl_sysctrl_v201a_config.h  peripheral_gclk_config.h
lib2/hal/hpl/core/: hpl_core_port.h  hpl_init.c
lib2/hal/hpl/eic/: hpl_eic1_v101a.c
lib2/hal/hpl/pm/: hpl_pm1_v201_base.inc
lib2/hal/hpl/port/: hpl_port_v100.c
lib2/hal/hpl/sysctrl/: hpl_sysctrl_v201a.c
lib2/hal/hpl/usb/: hpl_usb_v101.c
lib2/hal/hri/: hri_port_v100.h
lib2/hal/include/: hal_gpio.h
lib2/hal/src/: hal_ext_irq.c  hal_usb_device.c
lib2/samd21a/include/: component-version.h  sam.h  samd21e15a.h  samd21e18a.h  samd21g15a.h  samd21g16a.h  samd21g17a.h  samd21g18a.h  samd21j16a.h  samd21j17a.h  samd21j18a.h
lib2/samd21a/include/component/: adc.h  dac.h  eic.h  evsys.h  gclk.h  nvmctrl.h  port.h  rtc.h  sysctrl.h  tc.h  tcc.h  usb.h  wdt.h
lib2/samd21a/include/instance/: eic.h  evsys.h  gclk.h  mtb.h  nvmctrl.h  pac0.h  pac1.h  port.h  sercom0.h  sercom2.h  sercom3.h  sercom4.h  sercom5.h  sysctrl.h  tc3.h  tc4.h  tc5.h  tcc0.h  usb.h
lib2/samd21a/include/pio/: samd21e15a.h  samd21e17a.h  samd21e18a.h  samd21g15a.h  samd21g17a.h  samd21g17au.h  samd21g18a.h  samd21g18au.h  samd21j15a.h  samd21j18a.h
lib2/usb/: usb_protocol.h
lib2/usb/device/: usbdc.c
lib2/utils/include/: parts.h
output/: hello_image.hex
projectfiles/: CMakeLists.txt  toolchain-arm-none-eabi-gcc.cmake
scripts/: arduino_zero.cfg  zero.gdb
